--- a/documentation/dependencies.html
+++ b/documentation/dependencies.html
@@ -52,13 +52,19 @@
         <li>
             <b>@angular/animations</b> : ^15.2.0</li>
         <li>
+            <b>@angular/cdk</b> : ^15.2.3</li>
+        <li>
             <b>@angular/common</b> : ^15.2.0</li>
         <li>
             <b>@angular/compiler</b> : ^15.2.0</li>
         <li>
             <b>@angular/core</b> : ^15.2.0</li>
         <li>
+            <b>@angular/flex-layout</b> : ^15.0.0-beta.42</li>
+        <li>
             <b>@angular/forms</b> : ^15.2.0</li>
+        <li>
+            <b>@angular/material</b> : ^15.2.3</li>
         <li>
             <b>@angular/platform-browser</b> : ^15.2.0</li>
         <li>
@@ -67,6 +73,10 @@
             <b>@angular/router</b> : ^15.2.0</li>
         <li>
             <b>@compodoc/compodoc</b> : ^1.1.19</li>
+        <li>
+            <b>chart.js</b> : ^4.2.1</li>
+        <li>
+            <b>crypto-js</b> : ^4.1.1</li>
         <li>
             <b>rxjs</b> : ~7.8.0</li>
         <li>
