--- a/documentation/modules/AppModule.html
+++ b/documentation/modules/AppModule.html
@@ -187,18 +187,26 @@
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { NgModule } from &#x27;@angular/core&#x27;;
 import { BrowserModule } from &#x27;@angular/platform-browser&#x27;;
 
+import { HttpClientModule } from &quot;@angular/common/http&quot;;
+
 import { AppRoutingModule } from &#x27;./app-routing.module&#x27;;
 import { AppComponent } from &#x27;./app.component&#x27;;
+import { BrowserAnimationsModule } from &#x27;@angular/platform-browser/animations&#x27;;
+import { MAT_DATE_LOCALE } from &#x27;@angular/material/core&#x27;;
 
 @NgModule({
   declarations: [
     AppComponent
   ],
   imports: [
+    AppRoutingModule,
     BrowserModule,
-    AppRoutingModule
+    BrowserAnimationsModule,
+    HttpClientModule,
   ],
-  providers: [],
+  providers: [
+    {provide: MAT_DATE_LOCALE, useValue: &#x27;es-ES&#x27;}
+  ],
   bootstrap: [AppComponent]
 })
 export class AppModule { }
