--- a/documentation/modules/AuthRoutingModule.html
+++ b/documentation/modules/AuthRoutingModule.html
@@ -74,9 +74,20 @@
     <div class="tab-pane fade  tab-source-code" id="c-source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { NgModule } from &#x27;@angular/core&#x27;;
 import { RouterModule, Routes } from &#x27;@angular/router&#x27;;
+import { LoginComponent } from &#x27;./pages/login/login.component&#x27;;
 
 const routes: Routes &#x3D; [
-  
+  {
+    path: &#x27;&#x27;,
+    children: [
+      {
+        path: &#x27;login&#x27;, component: LoginComponent
+      },
+      {
+        path: &#x27;**&#x27;, redirectTo: &#x27;login&#x27;
+      }
+    ]
+  }  
 ];
 
 @NgModule({
